tests/fixtures/invalid/ngl010_invalid.py
async def fetch_records() -> list[dict]:
    return []


async def on_click() -> None:
    await fetch_records()
